# streamguard

./: .env.example  .gitignore  README.md  SPARK_INTEGRATION_SUMMARY.md  docker-compose.yml  docker_compose.yml  test-e2e.sh
.run/: Cocker Compose Up.run.xml  Event Generator.run.xml  Maven Test (event-generator).run.xml  Maven Test (query-api).run.xml  Query API (JFR Profiling).run.xml  Query API (Spring Boot).run.xml  Remote Debug (5005).run.xml  Spark ML Pipeline (Full).run.xml  Spark ML Pipeline.run.xml
docs/: END_TO_END_TESTING.md  IDE_SETUP.md  PROJECT_HANDOFF_SPRINT2.md  PROJECT_HANDOFF_SPRINT3.md  PROJECT_HANDOFF_SPRINT5.md  PROJECT_HANDOFF_SPRINT6.md  SPARK_INTEGRATION.md  SPARK_QUICKSTART.md  architecture.md  demo_scope.md  event-schema-documentation.md  event-schema.json  project_handoff.md  sample-events.json  setup.md  sprint_backlog_roadmap.md
docs/development/: E2E_TEST_REPORT_SPRINT10.md  E2E_TEST_REPORT_SPRINT9.md  SPARK_ML_VALIDATION_REPORT.md  technology_coverage.md
docs/final/: README.md
docs/final/api/: API_REFERENCE.md
docs/final/diagrams/: CLASS_DIAGRAMS.md  COMPONENT_DIAGRAM.md  DATA_FLOW_ANIMATION.md
docs/final/guides/: AI_ML.md  ARCHITECTURE.md  DEPLOYMENT.md  QUICK_START.md  TROUBLESHOOTING.md
docs/integrations/: SPARK_INTEGRATION.md
docs/product/: README.md
docs/product/api/: API_REFERENCE.md
docs/product/diagrams/: CLASS_DIAGRAMS.md  COMPONENT_DIAGRAM.md  DATA_FLOW_ANIMATION.md  MERMAID_FIXES.md
docs/product/guides/: ARCHITECTURE.md  DEPLOYMENT.md  QUICK_START.md  TROUBLESHOOTING.md
docs/sprints/: PROJECT_HANDOFF_SPRINT1.md  PROJECT_HANDOFF_SPRINT10.md  PROJECT_HANDOFF_SPRINT11.md  PROJECT_HANDOFF_SPRINT12.md  PROJECT_HANDOFF_SPRINT4.md  PROJECT_HANDOFF_SPRINT7.md  PROJECT_HANDOFF_SPRINT8.md  PROJECT_HANDOFF_SPRINT9.md  SPRINT10_PLAN.md  SPRINT11_PLAN.md  SPRINT11_PROGRESS_REPORT.md  SPRINT12_PARQUET_VALIDATION.md  SPRINT12_PLAN.md  SPRINT8_PLAN.md  SPRINT9_ANALYSIS.md  SPRINT9_PLAN.md
event-generator/: .gitignore  Dockerfile  dependency-reduced-pom.xml  pom.xml
event-generator/src/main/java/com/streamguard/: EventFactory.java  EventGenerator.java
event-generator/src/main/java/com/streamguard/model/: AuthEvent.java  DnsEvent.java  Event.java  EventMetadata.java  EventStatus.java  EventType.java  FileEvent.java  NetworkEvent.java  ProcessEvent.java
event-generator/src/main/java/com/streamguard/util/: JsonUtil.java
event-generator/src/test/java/com/streamguard/: EventFactoryTest.java
event-generator/src/test/java/com/streamguard/model/: EventSerializationTest.java
genai-assistant/: Dockerfile  README.md  requirements.txt
genai-assistant/app/: config.py  main.py  models.py
genai-assistant/app/llm/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
genai-assistant/app/prompts/: system_prompts.py
genai-assistant/app/services/: __init__.py  assistant.py  java_api.py  rag_client.py  rocksdb_client.py
genai-assistant/app/utils/: __init__.py  metrics.py
monitoring/grafana/dashboards/: README.md  dashboard-provider.yml  dashboards.yml  streamguard-genai.json  streamguard-lambda.json  streamguard-performance.json  streamguard-pipeline.json  streamguard-threats.json
monitoring/grafana/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
query-api/: README.md  pom.xml
query-api/src/main/java/com/streamguard/queryapi/: QueryApiApplication.java
query-api/src/main/java/com/streamguard/queryapi/config/: RocksDBConfig.java
query-api/src/main/java/com/streamguard/queryapi/controller/: AIQueryController.java  AnalysisController.java  AnomalyController.java  EventController.java  HealthController.java  MetricsController.java  StatsController.java  TrainingDataController.java
query-api/src/main/java/com/streamguard/queryapi/model/: AnomalyReport.java  AnomalyResult.java  BatchAnomaly.java  SecurityEvent.java  ThreatAnalysis.java
query-api/src/main/java/com/streamguard/queryapi/service/: AIQueryService.java  QueryService.java  TrainingDataService.java
query-api/src/main/resources/: application.yml
query-api/src/test/java/com/streamguard/queryapi/: ParquetReaderTest.java
query-api/src/test/java/com/streamguard/queryapi/controller/: AnomalyControllerTest.java
query-api/src/test/java/com/streamguard/queryapi/service/: QueryServiceTest.java
rag-service/: README.md  docker-compose.yml  main.py  requirements.txt  seed_threats.py
scripts/: create-all-issues.sh  create-labels.sh  create-sprint2-issues.sh  init_project.sh  install_deps.sh  install_deps_script.sh  install_missing.sh  nuclear-cleanup.sh  run_local.sh  setup-github-labels.sh  start-event-generator.sh  start-genai-assistant.sh  start-query-api.sh  start-stream-processor.sh  verify_setup.sh  verify_setup_script.sh
spark-ml-pipeline/: .gitignore  README.md  requirements.txt
spark-ml-pipeline/config/: spark_config.yaml
spark-ml-pipeline/scripts/: run_pipeline.sh
spark-ml-pipeline/src/: anomaly_detector.py  feature_extractor.py  kafka_reader.py  training_data_generator.py
stream-processor/: AI_ANALYSIS.md  CMakeLists.txt  README.md  test_embeddings.cpp
stream-processor/include/: ai_analyzer.h  anomaly_detector.h  event.h  event_store.h  kafka_consumer.h  metrics.h
stream-processor/src/: ai_analyzer.cpp  anomaly_detector.cpp  event.cpp  event_store.cpp  kafka_consumer.cpp  main.cpp  metrics.cpp
stream-processor/test/: CMakeLists.txt  anomaly_detector_test.cpp  event-test.cpp  event_store_test.cpp
